템플릿 | WebApiExRateProvider 예외처리 리팩토링